tests/snapshots/scenarios__048_search_strat_path_fuzzy_handles_duplicate_headings.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "048_search_strat_path_fuzzy_handles_duplicate_headings",
  "category": "search_match_strategies",
  "status": "validated",
  "files": []
}
