tests/snapshots/scenarios__049_search_strat_path_fuzzy_ignores_fenced_headings.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
description: "Scenario 049_search_strat_path_fuzzy_ignores_fenced_headings [search_match_strategies]: path fuzzy ignores fenced headings"
expression: result
info:
  id: 049_search_strat_path_fuzzy_ignores_fenced_headings
  name: path fuzzy ignores fenced headings
  category: search_match_strategies
  description: search_match_strategies scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/049_search_strat_path_fuzzy_ignores_fenced_headings/scenario.toml
---
{
  "category": "search_match_strategies",
  "files": [],
  "scenario_id": "049_search_strat_path_fuzzy_ignores_fenced_headings",
  "status": "validated"
}
