tests/snapshots/scenarios__050_search_strat_path_fuzzy_prefers_path_and_section.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "050_search_strat_path_fuzzy_prefers_path_and_section",
  "category": "search_match_strategies",
  "status": "validated",
  "files": []
}
