tests/snapshots/scenarios__051_search_strat_regex_strategy.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "051_search_strat_regex_strategy",
  "category": "search_match_strategies",
  "status": "validated",
  "files": []
}
