tests/snapshots/scenarios__052_seed_journal_semantic_pull_surfaces_agenda.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
description: "Scenario 052_seed_journal_semantic_pull_surfaces_agenda [seed_and_priors]: journal semantic pull surfaces agenda"
expression: result
info:
  id: 052_seed_journal_semantic_pull_surfaces_agenda
  name: journal semantic pull surfaces agenda
  category: seed_and_priors
  description: seed_and_priors scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/052_seed_journal_semantic_pull_surfaces_agenda/scenario.toml
---
{
  "category": "seed_and_priors",
  "files": [],
  "scenario_id": "052_seed_journal_semantic_pull_surfaces_agenda",
  "status": "validated"
}
