tests/snapshots/scenarios__053_seed_seed_accuracy_cluster_grounded.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
description: "Scenario 053_seed_seed_accuracy_cluster_grounded [seed_and_priors]: seed accuracy cluster grounded"
expression: result
info:
  id: 053_seed_seed_accuracy_cluster_grounded
  name: seed accuracy cluster grounded
  category: seed_and_priors
  description: seed_and_priors scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/053_seed_seed_accuracy_cluster_grounded/scenario.toml
---
{
  "category": "seed_and_priors",
  "files": [],
  "scenario_id": "053_seed_seed_accuracy_cluster_grounded",
  "status": "validated"
}
