tests/snapshots/scenarios__054_seed_structural_priors_architecture_hub.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "054_seed_structural_priors_architecture_hub",
  "category": "seed_and_priors",
  "status": "validated",
  "files": []
}
