tests/snapshots/scenarios__056_sem_policy_planned_payload.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
description: "Scenario 056_sem_policy_planned_payload [semantic_policy]: planned payload"
expression: result
info:
  id: 056_sem_policy_planned_payload
  name: planned payload
  category: semantic_policy
  description: semantic_policy scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/056_sem_policy_planned_payload/scenario.toml
---
{
  "category": "semantic_policy",
  "files": [],
  "scenario_id": "056_sem_policy_planned_payload",
  "status": "validated"
}
