tests/snapshots/scenarios__057_tree_scope_mixed_scope_collapse_toggle.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "057_tree_scope_mixed_scope_collapse_toggle",
  "category": "tree_scope_filters",
  "status": "validated",
  "files": []
}
