tests/snapshots/scenarios__058_tree_scope_section_scope_per_doc_cap.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "058_tree_scope_section_scope_per_doc_cap",
  "category": "tree_scope_filters",
  "status": "validated",
  "files": []
}
