tests/snapshots/scenarios__059_tree_scope_semantic_edges_restrict_section_scope.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
description: "Scenario 059_tree_scope_semantic_edges_restrict_section_scope [tree_scope_filters]: semantic edges restrict section scope"
expression: result
info:
  id: 059_tree_scope_semantic_edges_restrict_section_scope
  name: semantic edges restrict section scope
  category: tree_scope_filters
  description: tree_scope_filters scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/059_tree_scope_semantic_edges_restrict_section_scope/scenario.toml
---
{
  "category": "tree_scope_filters",
  "files": [],
  "scenario_id": "059_tree_scope_semantic_edges_restrict_section_scope",
  "status": "validated"
}
